fixed dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -81,9 +81,12 @@ button:focus-visible {
 @media (prefers-color-scheme: dark) {
   :root {
     color: #ffffff;
-    background-color: #2c2c2c;
+    background-color: #191919;
   }
   button {
+    background-color: #2c2c2c;
+  }
+  div.count {
     background-color: #2c2c2c;
   }
 }
